antes de comenzar a tocar el fetch y obtener los parametros de busqueda para el css frontal

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             </ul>
                         </div>
 
-                        <input class="form-control me-2" type="search" placeholder="Busqueda" aria-label="Search">
+                        <input class="form-control me-2 .d-none"  type="search" placeholder="Busqueda" aria-label="Search">
                         <button class="btn btn-outline-warning" type="submit">Busqueda</button>
                     </form>
                 </form>
