solucionar el problema de los includes

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         </div>
 
                         <input class="form-control me-2 .d-none"  type="search" placeholder="Busqueda" aria-label="Search">
-                        <button class="btn btn-outline-warning" type="submit">Busqueda</button>
+                        <button id="botonDeBusqueda" class="btn btn-outline-warning" type="submit">Busqueda</button>
                     </form>
                 </form>
             </div>
