tengo que ver como solucionar el tema del link que se va generando para que la busqueda sea adeciada

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 
                                 <div class="input-group mt-3 mb-3">
                                     <div class="input-group-prepend">
-                                        <label class="input-group-text" for="inputGroupSelect01">Canal favorito</label>
+                                        <!-- <label class="input-group-text" for="inputGroupSelect01">Canal favorito</label>
                                     </div>
                                     <select class="custom-select" id="canalBusqueda">
                                         <option selected="">Canales</option>
-                                    </select>
+                                    </select> -->
                                 </div>
                                 <!-- TODO: linea en la que estoy trabajando -->
                                 <div class="input-group mt-3 mb-3">
