tengo que fijarme con hago el querys

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                         <label class="input-group-text" for="paisBusqueda">Pais</label>
                                     </div>
                                     <select class="custom-select" id="paisBusqueda">
-                                        <option selected="">Paises</option>
+                                        <option selected=""></option>
                                     </select>
                                 </div>
 
@@ -97,7 +97,7 @@
                                         <label class="input-group-text" for="ciudadBusqueda">Ciudad</label>
                                     </div>
                                     <select class="custom-select" id="ciudadBusqueda">
-                                        <option selected="">Ciudades</option>
+                                        <option selected=""></option>
                                     </select>
                                 </div>
 
@@ -109,7 +109,7 @@
                                         <label class="input-group-text" for="inputGroupSelect01">Compañia</label>
                                     </div>
                                     <select class="custom-select" id="companiaBusqueda">
-                                        <option selected="">Compañias</option>
+                                        <option selected=""></option>
 
                                     </select>
                                 </div>
