termine el buscador

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             </ul>
                         </div>
 
-                        <input class="form-control me-2 .d-none"  type="search" placeholder="Busqueda" aria-label="Search">
+                        <input id="busquedaGeneral" class="form-control me-2 .d-none"  type="search" placeholder="Busqueda de todo" aria-label="Search">
                         <button id="botonDeBusqueda" class="btn btn-outline-warning" type="submit">Busqueda</button>
                     </form>
                 </form>
