--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                             href="#">Contactos</a>
                     </li>
                     <li class="nav-item">
-                        <a id="usuariosLink" class="nav-link text-light" href="#">Usuarios</a>
+                        <a id="
+                        
+                        Link" class="nav-link text-light" href="#">Usuarios</a>
                     </li>
                     <li class="nav-item">
                         <a id="paisesCiudadesLink" class="nav-link text-light" href="#">Paises/Provincias/Ciudades</a>
@@ -49,7 +51,7 @@
                 <form class="d-flex">
                     <form class="d-flex">
 
-                        <div class="nav-item dropdown">
+                        <div  id="opcionesExtraBusqueda" class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
 
