--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                             href="#">Contactos</a>
                     </li>
                     <li class="nav-item">
-                        <a id="
-                        
-                        Link" class="nav-link text-light" href="#">Usuarios</a>
+                        <a id="usuariosLink" class="nav-link text-light" href="#">Usuarios</a>
                     </li>
                     <li class="nav-item">
                         <a id="paisesCiudadesLink" class="nav-link text-light" href="#">Paises/Provincias/Ciudades</a>
@@ -51,8 +49,8 @@
                 <form class="d-flex">
                     <form class="d-flex">
 
-                        <div  id="opcionesExtraBusqueda" class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
+                        <div class="nav-item dropdown">
+                            <a id="opcionesExtraBusqueda" class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
 
                             </a>
@@ -743,7 +741,36 @@
 
 
 
+<section id="usuariosSection" class="d-none">
+    <div class="container border border-warning  bg-dark mt-3">
+        <div class="row bg-dark">
+            <div class=" container bg-danger w-50 d-flex justify-content-center mt-4 mb-4 container-titulo">
+                <h1 class="text-white nuevo-contacto-titulo"> Usuarios</h1>
+            </div>
+        </div>
 
+
+        <div class="container-fluid">
+            <div class="col table-responsive">
+                <table class="table table-striped table-bordered table-hover table-dark table-responsive">
+                    <thead>
+                        <tr>
+                            <th>User</th>
+                            <th>Email</th>
+                            <th>Borra Contacto</th>
+                            <th>Editar</th>
+
+                        </tr>
+                    </thead>
+                    <tbody class="table-responsive-lg" id="cuerpoTablaContactoPantallaUsuarios"></tbody>
+                </table>
+            </div>
+
+
+        </div>
+
+</div>
+</section>
 
 
 
@@ -795,7 +822,7 @@
     <script src="js/busquedas.js"></script>
     <script src="js/pantallaContactosMostrarEditarBorrar.js"></script>
     <script src="js/tableToExcel.js"></script>
-
+    <script src="js/usuariosPantalla.js"></script>
 
 </body>
 
