--- a/index.html
+++ b/index.html
@@ -554,6 +554,37 @@
                         </div>
 
 
+
+
+
+                        
+                        <div class="row d-flex justify-content-center mb-3 ">
+                            <div class="col-3">
+                                <div class="form-group">
+                                    <label for="registerNombre" class="estilo-label">Nombre*</label>
+                                    <input id="registerNombre" type="email" class="form-control" placeholder="Email"
+                                        required="">
+                                </div>
+
+                            </div>
+
+                        </div>
+
+
+                        <div class="row d-flex justify-content-center mb-3 ">
+                            <div class="col-3">
+                                <div class="form-group">
+                                    <label for="registerApellido" class="estilo-label">Apellido*</label>
+                                    <input id="registerApellido" type="email" class="form-control" placeholder="Email"
+                                        required="">
+                                </div>
+
+                            </div>
+
+                        </div>
+
+
+
                         <div class="row d-flex justify-content-center mb-3 ">
                             <div class="col-3">
                                 <div class="form-group">
@@ -755,6 +786,8 @@
                 <table class="table table-striped table-bordered table-hover table-dark table-responsive">
                     <thead>
                         <tr>
+                            <th>Nombre</th>
+                            <th>Apellido</th>
                             <th>User</th>
                             <th>Email</th>
                             <th>Borra Contacto</th>
