--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             href="#">Contactos</a>
                     </li>
                     <li class="nav-item">
-                        <a id="usuariosLink" class="nav-link text-light" href="#">Usuarios</a>
+                        <a id="usuariosLink" class="nav-link text-light d-none" href="#">Usuarios</a>
                     </li>
                     <li class="nav-item">
                         <a id="paisesCiudadesLink" class="nav-link text-light" href="#">Paises/Provincias/Ciudades</a>
