por comenzar a cambiar compañias para poder agregar el pais y el numero de telefono

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                         <div class="col-3">
                             <div class="form-group">
                                 <label for="passwordLogin" class="estilo-label">Contraseña*</label>
-                                <input id="passwordLogin" type="text" class="form-control" placeholder="Contraseña"
+                                <input id="passwordLogin" type="password" class="form-control" placeholder="Contraseña"
                                     required="">
                             </div>
 
@@ -461,7 +461,7 @@
                             <div class="form-group">
                                 <label for="emailLogin" class="estilo-label">Email*</label>
                                 <input id="emailLogin" type="email" class="form-control" placeholder="Email"
-                                    required="">
+                                    required>
                             </div>
 
                         </div>
@@ -532,7 +532,7 @@
                             <div class="col-3">
                                 <div class="form-group">
                                     <label for="registerPassWord" class="estilo-label">Contraseña*</label>
-                                    <input id="registerPassWord" type="text" class="form-control"
+                                    <input id="registerPassWord" type="password" class="form-control"
                                         placeholder="Contraseña" required="">
                                 </div>
 
@@ -546,7 +546,7 @@
                                 <div class="form-group">
                                     <label for="registerEmail" class="estilo-label">Email*</label>
                                     <input id="registerEmail" type="email" class="form-control" placeholder="Email"
-                                        required="">
+                                        required>
                                 </div>
 
                             </div>
@@ -562,7 +562,7 @@
                             <div class="col-3">
                                 <div class="form-group">
                                     <label for="registerNombre" class="estilo-label">Nombre*</label>
-                                    <input id="registerNombre" type="email" class="form-control" placeholder="Email"
+                                    <input id="registerNombre" type="email" class="form-control" placeholder="Nombre"
                                         required="">
                                 </div>
 
@@ -575,8 +575,8 @@
                             <div class="col-3">
                                 <div class="form-group">
                                     <label for="registerApellido" class="estilo-label">Apellido*</label>
-                                    <input id="registerApellido" type="email" class="form-control" placeholder="Email"
-                                        required="">
+                                    <input id="registerApellido" type="email" class="form-control" placeholder="Apellido"
+                                        required>
                                 </div>
 
                             </div>
