seccion compañias ya acepta numero tengo que traer los paises

--- a/index.html
+++ b/index.html
@@ -643,10 +643,12 @@
                 <div class="row row d-flex justify-content-center mb-3">
                     <div class="col-3">
                         <div class="form-group">
-                            <label for="agregarCompaniaInput" class="estilo-label">Agregar compañias</label>
+                            <label for="agregarCompaniaInput" class="estilo-label">Agregar compañia</label>
                             <input id="agregarCompaniaInput" type="text" class="form-control" placeholder="Compañia"
                                 required="">
-
+                                <label for="agregarCompaniaNumero" class="estilo-label mt-3">Agregar numero</label>
+                                <input id="agregarCompaniaNumero" type="text" class="form-control" placeholder="Numero"
+                                    required="">
                         </div>
 
                     </div>
