agregue el formulario de paises a companias

--- a/index.html
+++ b/index.html
@@ -649,6 +649,12 @@
                                 <label for="agregarCompaniaNumero" class="estilo-label mt-3">Agregar numero</label>
                                 <input id="agregarCompaniaNumero" type="text" class="form-control" placeholder="Numero"
                                     required="">
+
+
+                                        <label class="estilo-label" for="paisCompania">Pais</label>
+                                        <select id="paisCompania" class="form-control" required>
+                                            <option value="" selected="">Seleccione su pais</option>
+                                        </select>
                         </div>
 
                     </div>
